<resources>
    <string name="app_name">schedule-manager</string>

    //activity_main.xml
    <string name="UserButton">User</string>
    <string name="AdminButton">Admin</string>
    <string name="mainLoginTextView">Login as:</string>

    //admin_login_activity.xml
    <string name="adminLoginButton">Sign in</string>
    <string name="textLogAdmin">Login</string>
    <string name="editTextEmailAdmin">Email</string>
    <string name="editTextPassAdmin">Password</string>
    <string name="userLoginButton">Sign in</string>


    //user_welcome_activity.xml
    <string name="textLogUser">Login</string>
    <string name="miHome">Home</string>
    <string name="miNotifications">Notifications</string>
    <string name="miProfile">Profile</string>
    <string name="editTextEmailUser">Email</string>
    <string name="editTextPassUser">Password</string>

    //admin_welcome_activity.xml
    <string name="miAdminShedule">Shedule</string>
    <string name="miAdminEmployees">Employees</string>
    <string name="miAdminNotifications">Notifications</string>
...

    //user_profile_fragment.xml
    <string name="userProfileName">User Name</string>
    <string name="infoProfile">Info</string>
    <string name="emailProfile">E-mail:</string>
    <string name="phoneProfile">Phone:</string>
    <string name="specialtyProfile">Specialty:</string>
    <string name="settingsImage">SettingsImage</string>
    <string name="profileImage">ProfileImage</string>

    <string name="userScheduleButton">Schedule</string>
    <string name="userEditButton">Edit info</string>
    <string name="userTextWelcome">Welcome back</string>
...
