...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="407dp"
        android:layout_height="212dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profileImage"
            android:src="@drawable/ic_employer" />

        <TextView
            android:id="@+id/User_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/userProfileName"
            android:textSize="30sp" />

...
